--- a/style/style.css
+++ b/style/style.css
@@ -52,9 +52,11 @@ body {
   .profile-userpic img {
     float: none;
     margin: 0 auto;
-    width: 50%;
-    height: 50%;
-    
+    width: 70%;
+    height: 70%;
+    -webkit-border-radius: 20% !important;
+    -moz-border-radius: 20% !important;
+    border-radius: 20% !important;
   }
   
   .profile-usertitle {
